# deeplx-pool

./: .gitignore  Dockerfile  Dockerfile-uv-py312-alpine  README.md  docker-compose-uv-py312-alpine.yml  docker-compose.yml  fofa-results.txt  fofa-results6.txt  linuxdo216930.txt  proc_file.py  proc_static.py  pyproject.toml  run_batch_deeplx_tr.py  tasks.py
src/deeplx_pool/: __init__.py  batch_deeplx_tr.py  check_deeplx.py  deeplx_client.py  deeplx_client_async.py  deeplx_pool.py  duration_human.py  fastapi_app.py  fetch_urls_fofa_hack.py  scrape_deeplx_fofa.py  scrape_deeplx_shodan.py  trtext2docx.py
tests/: test.txt  test_deeplx_client.py
