[project]
name = "deeplx-pool"
version = "0.1.0a0"
description = "Deeplx url pool + REST API"
authors = [
    { name = "ffreemt", email = "yucongo+fmt@gmail.com" }
]
dependencies = [
    "ycecream>=1.3.17",
    "httpx>=0.27.0",
    "pyquery>=2.0.0",
    "diskcache>=5.6.3",
    "fastapi>=0.112.0",
    "loguru>=0.7.2",
    "lxml>=5.3.0",
    "rich>=13.7.1",
    "loadtext>=0.0.3",
    "nest-asyncio>=1.6.0",
    "python-docx>=1.1.2",
    "uvicorn[standard]>=0.30.5",
    "fofa-hack>=2.5.1",
    "aiohttp>=3.10.5",
    "requests>=2.32.3",
    "pycryptodomex>=3.20.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "ipython>=8.26.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deeplx_pool"]
